# OpenHorn

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.server  README.md  biome.json  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/server/: package.json  tsconfig.json
apps/sidecar/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/plans/: 2026-03-09-channels-design.md  2026-03-10-chat-global-default-design.md  2026-03-10-chat-global-default-plan.md  2026-03-10-chat-streaming-design.md  2026-03-10-chat-streaming-plan.md  2026-03-11-agent-default-workspace-settings-design.md  2026-03-11-agent-default-workspace-settings-plan.md  2026-03-11-agent-mcp-design.md  2026-03-11-agent-mcp-plan.md  2026-03-11-agent-sdk-design.md  2026-03-11-agent-sdk-plan.md  2026-03-11-agent-settings-design.md  2026-03-11-agent-settings-plan.md  2026-03-11-agent-tool-ui-design.md  2026-03-11-agent-ui-revamp-design.md  2026-03-11-agent-ui-revamp-plan.md  2026-03-11-appshell-chat-ux-design.md  2026-03-11-appshell-chat-ux-plan.md  2026-03-11-attachments-design.md  2026-03-11-attachments-plan.md  2026-03-11-attachments-verify.md  2026-03-11-chat-per-conversation-model-design.md  2026-03-11-chat-per-conversation-model-plan.md  (+57 more)
(+321 files in other folders)
