[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# For spawning the OpenHorn sidecar binary as a Tauri sidecar process
# and for the workspace picker dialog.
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Cryptographically random handshake token for the sidecar handshake.
# rand::rngs::OsRng is backed by the platform CSPRNG on all OSes.
rand = "0.8"
# Parsing Codex CLI's MCP config (~/.codex/config.toml) during import.
toml = "0.8"
# Reading CC Switch's SQLite store (~/.cc-switch/cc-switch.db) during MCP
# import. `bundled` compiles SQLite in so there is no system dependency.
rusqlite = { version = "0.31", features = ["bundled"] }
